@@ -25,16 +25,17 @@ import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.google.common.collect.ImmutableMap;
 import com.spotify.styx.model.WorkflowInstance;
 import com.spotify.styx.state.RunState;
+import java.io.IOException;
 import java.util.Map;
 import java.util.Optional;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 @RunWith(MockitoJUnitRunner.class)
 public class AggregateStorageTest {
@@ -53,10 +54,21 @@ public class AggregateStorageTest {
     sut = new AggregateStorage(bigtable, datastore);
   }
 
+  @After
+  public void tearDown() throws Exception {
+    sut.close();
+  }
+
+  @Test
+  public void shouldCloseDatastore() throws IOException {
+    sut.close();
+    verify(datastore).close();
+  }
+
   @Test
   public void readActiveWorkflowInstances() throws Exception {
     final Map<WorkflowInstance, RunState> activeStates =
-        ImmutableMap.of(workflowInstance, runState);
+        Map.of(workflowInstance, runState);
     when(datastore.readActiveStates()).thenReturn(activeStates);
     assertThat(sut.readActiveStates(), is(activeStates));
     verify(datastore).readActiveStates();
@@ -72,7 +84,7 @@ public class AggregateStorageTest {
   @Test
   public void readActiveWorkflowInstancesForComponent() throws Exception {
     final Map<WorkflowInstance, RunState> activeStates =
-        ImmutableMap.of(workflowInstance, runState);
+        Map.of(workflowInstance, runState);
     when(datastore.readActiveStates(COMPONENT)).thenReturn(activeStates);
     assertThat(sut.readActiveStates(COMPONENT), is(activeStates));
     verify(datastore).readActiveStates(COMPONENT);
