@@ -24,18 +24,22 @@ import static com.spotify.styx.state.TimeoutConfig.createWithDefaultTtl;
 import static java.time.Duration.ofSeconds;
 import static org.hamcrest.Matchers.either;
 import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertThat;
 import static org.mockito.Matchers.any;
 import static org.mockito.Matchers.anyLong;
 import static org.mockito.Matchers.anySetOf;
+import static org.mockito.Matchers.anyString;
 import static org.mockito.Matchers.eq;
-import static org.mockito.Mockito.inOrder;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.timeout;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
+import static org.mockito.hamcrest.MockitoHamcrest.argThat;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
@@ -59,6 +63,8 @@ import com.spotify.styx.state.StateData;
 import com.spotify.styx.state.StateManager;
 import com.spotify.styx.state.TimeoutConfig;
 import com.spotify.styx.storage.Storage;
+import com.spotify.styx.util.EventUtil;
+import com.spotify.styx.util.ShardedCounter;
 import com.spotify.styx.util.Time;
 import java.io.IOException;
 import java.time.Duration;
@@ -69,7 +75,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ExecutorService;
@@ -79,16 +84,20 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.InOrder;
-import org.mockito.Matchers;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.Mockito;
+import org.mockito.junit.MockitoJUnitRunner;
 
 @RunWith(MockitoJUnitRunner.class)
 public class SchedulerTest {
 
   private static final WorkflowId WORKFLOW_ID1 =
       WorkflowId.create("styx1", "example1");
+  private static final WorkflowId WORKFLOW_ID2 =
+      WorkflowId.create("styx2", "example2");
   private static final WorkflowInstance INSTANCE_1 =
       WorkflowInstance.create(WORKFLOW_ID1, "2016-12-02T01");
 
@@ -112,12 +121,17 @@ public class SchedulerTest {
   @Mock WorkflowExecutionGate gate;
   @Mock StateManager stateManager;
   @Mock Storage storage;
+  @Mock ShardedCounter shardedCounter;
+
+  @Captor ArgumentCaptor<Event> eventCaptor = ArgumentCaptor.forClass(Event.class);
 
   @Before
-  public void setUp() {
+  public void setUp() throws Exception {
     workflows = new HashMap<>();
     when(gate.executionBlocker(any()))
         .thenReturn(WorkflowExecutionGate.NO_BLOCKER);
+    when(shardedCounter.counterHasSpareCapacity(anyString())).thenReturn(true);
+    doNothing().when(stateManager).receiveIgnoreClosed(eventCaptor.capture(), anyLong());
   }
 
   @After
@@ -134,12 +148,12 @@ public class SchedulerTest {
 
     when(resourceDecorator.decorateResources(
         any(RunState.class), any(WorkflowConfiguration.class), anySetOf(String.class)))
-        .thenAnswer(a -> a.getArgumentAt(2, Set.class));
+        .thenAnswer(a -> a.getArgument(2));
     
     when(storage.workflows(anySetOf(WorkflowId.class))).thenReturn(workflows);
 
     scheduler = new Scheduler(time, timeoutConfig, stateManager, storage, resourceDecorator,
-        stats, rateLimiter, gate, outputHandlers);
+        stats, rateLimiter, gate, shardedCounter, executor, outputHandlers);
   }
 
   private void setResourceLimit(String resourceId, long limit) {
@@ -297,12 +311,10 @@ public class SchedulerTest {
 
     scheduler.tick();
 
-    InOrder inOrder = inOrder(stateManager);
-
     Lists.reverse(workflowInstances)
-        .forEach(x -> inOrder.verify(stateManager)
+        .forEach(x -> verify(stateManager)
             .receiveIgnoreClosed(eq(Event.dequeue(x, ImmutableSet.of())), anyLong()));
-    inOrder.verify(stateManager).receiveIgnoreClosed(eq(
+    verify(stateManager).receiveIgnoreClosed(eq(
         Event.dequeue(INSTANCE_1, ImmutableSet.of())), anyLong());
   }
 
@@ -310,7 +322,7 @@ public class SchedulerTest {
   public void shouldDequeueEvenWhenMissingWorkflows() throws Exception {
     setUp(20);
 
-    when(storage.workflows(anySetOf(WorkflowId.class))).thenReturn(ImmutableMap.of());
+    when(storage.workflows(anySetOf(WorkflowId.class))).thenReturn(Map.of());
 
     StateData stateData = StateData.newBuilder().tries(0).build();
 
@@ -328,12 +340,10 @@ public class SchedulerTest {
 
     scheduler.tick();
 
-    InOrder inOrder = inOrder(stateManager);
-
     Lists.reverse(workflowInstances)
-        .forEach(x -> inOrder.verify(stateManager)
+        .forEach(x -> verify(stateManager, timeout(30_000))
             .receiveIgnoreClosed(eq(Event.dequeue(x, ImmutableSet.of())), anyLong()));
-    inOrder.verify(stateManager).receiveIgnoreClosed(eq(
+    verify(stateManager, timeout(30_000)).receiveIgnoreClosed(eq(
         Event.dequeue(INSTANCE_1, ImmutableSet.of())), anyLong());
   }
 
@@ -370,28 +380,47 @@ public class SchedulerTest {
     setUp(20);
     setResourceLimit("r1", 0);
     initWorkflow(workflowUsingResources(WORKFLOW_ID1, "r1"));
-    StateData stateData = StateData.newBuilder()
-        .addMessage(Message.info("Resource limit reached for: [Resource{id=r1, concurrency=0}]"))
+    when(shardedCounter.counterHasSpareCapacity("r1")).thenReturn(false);
+
+    InOrder inOrder = Mockito.inOrder(stateManager);
+
+    StateData stateDataWithoutInfo = StateData.newBuilder()
         .build();
-    populateActiveStates(RunState.create(INSTANCE_1, State.QUEUED, stateData, time.get()));
+    RunState rsWithoutInfo = RunState.create(INSTANCE_1, State.QUEUED, stateDataWithoutInfo, time.get(), 17);
+    when(stateManager.getActiveStates()).thenReturn(Map.of(INSTANCE_1, rsWithoutInfo));
 
     scheduler.tick();
 
-    verify(stateManager, times(0)).receiveIgnoreClosed(
-        eq(Event.info(INSTANCE_1,
-            Message.info("Resource limit reached for: [Resource{id=r1, concurrency=0}]"))),
-        anyLong());
+    inOrder.verify(stateManager).getActiveStates();
+    inOrder.verify(stateManager).receiveIgnoreClosed(
+        Event.info(INSTANCE_1, Message.info("Resource limit reached for: [r1]")),
+        rsWithoutInfo.counter());
+
+    StateData stateDataWithInfo = StateData.newBuilder()
+        .addMessage(Message.info("Resource limit reached for: [r1]"))
+        .build();
+    when(stateManager.getActiveStates()).thenReturn(
+        Map.of(INSTANCE_1, RunState.create(INSTANCE_1, State.QUEUED, stateDataWithInfo, time.get())));
+
+    scheduler.tick();
+
+    inOrder.verify(stateManager).getActiveStates();
+    inOrder.verifyNoMoreInteractions();
   }
 
   @Test
-  public void shouldCountResourcesOnStatesConsumingResources() throws Exception {
+  public void shouldRecordAggregateResourceUsageAndDemand() throws Exception {
     setUp(20);
     setResourceLimit("r1", 2);
+    setResourceLimit("r2", 3);
     initWorkflow(workflowUsingResources(WORKFLOW_ID1, "r1"));
+    initWorkflow(workflowUsingResources(WORKFLOW_ID2, "r2"));
 
     // do not consume resources
     populateActiveStates(RunState.create(instance(WORKFLOW_ID1, "i0"), State.NEW, time.get()));
     populateActiveStates(RunState.create(instance(WORKFLOW_ID1, "i1"), State.QUEUED, time.get()));
+    populateActiveStates(RunState.create(instance(WORKFLOW_ID1, "i5"), State.QUEUED, time.get()));
+    populateActiveStates(RunState.create(instance(WORKFLOW_ID2, "i6"), State.QUEUED, time.get()));
     populateActiveStates(RunState.create(instance(WORKFLOW_ID1, "i4"), State.TERMINATED, time.get()));
 
     // consume resources
@@ -400,6 +429,8 @@ public class SchedulerTest {
 
     scheduler.tick();
 
+    verify(stats).recordResourceDemanded("r1", 2L);
+    verify(stats).recordResourceDemanded("r2", 1L);
     verify(stats).recordResourceUsed("r1", 2L);
   }
 
@@ -408,10 +439,15 @@ public class SchedulerTest {
     setUp(20);
     setResourceLimit("r1", 3);
     initWorkflow(workflowUsingResources(WORKFLOW_ID1, "r1"));
+    when(shardedCounter.counterHasSpareCapacity("r1")).thenReturn(false);
 
     // do not consume resources
-    populateActiveStates(RunState.create(instance(WORKFLOW_ID1, "i0"), State.NEW, time.get()));
-    populateActiveStates(RunState.create(instance(WORKFLOW_ID1, "i1"), State.QUEUED, time.get()));
+    final WorkflowInstance i0 = instance(WORKFLOW_ID1, "i0");
+    final WorkflowInstance i1 = instance(WORKFLOW_ID1, "i1");
+    final RunState rs0 = RunState.create(i0, State.NEW, time.get(), 17);
+    final RunState rs1 = RunState.create(i1, State.QUEUED, time.get(), 4711);
+    populateActiveStates(rs0);
+    populateActiveStates(rs1);
 
     // consume resources
     populateActiveStates(RunState.create(instance(WORKFLOW_ID1, "i2"), State.PREPARE, time.get()));
@@ -420,17 +456,57 @@ public class SchedulerTest {
 
     scheduler.tick();
 
-    verify(stateManager, never()).receiveIgnoreClosed(
-        eq(Event.dequeue(INSTANCE_1, ImmutableSet.of("r1"))),
-        anyLong());
+    verify(shardedCounter, times(1)).counterHasSpareCapacity("r1");
+    assertThat(eventCaptor.getAllValues().stream()
+        .anyMatch(e -> EventUtil.name(e).equals("dequeue")), is(false));
+    verify(stats).recordResourceDemanded("r1", 1L);
     verify(stats).recordResourceUsed("r1", 3L);
 
     scheduler.tick();
 
-    verify(stateManager, never()).receiveIgnoreClosed(
-        eq(Event.dequeue(INSTANCE_1, ImmutableSet.of("r1"))),
-        anyLong());
+    verify(stateManager, times(2)).getActiveStates();
+    verify(shardedCounter, times(2)).counterHasSpareCapacity("r1");
+    assertThat(eventCaptor.getAllValues().stream()
+        .anyMatch(e -> EventUtil.name(e).equals("dequeue")), is(false));
+    verify(stats, times(2)).recordResourceDemanded("r1", 1L);
     verify(stats, times(2)).recordResourceUsed("r1", 3L);
+  }
+
+  @Test
+  public void shouldCacheResourceUsageExceededLookup() throws Exception {
+    setUp(20);
+    setResourceLimit("r1", 2);
+    initWorkflow(workflowUsingResources(WORKFLOW_ID1, "r1"));
+    when(shardedCounter.counterHasSpareCapacity("r1")).thenReturn(false);
+
+    final WorkflowInstance i0 = instance(WORKFLOW_ID1, "i0");
+    final WorkflowInstance i1 = instance(WORKFLOW_ID1, "i1");
+    final RunState rs0 = RunState.create(i0, State.QUEUED, time.get(), 17);
+    final RunState rs1 = RunState.create(i1, State.QUEUED, time.get(), 4711);
+    populateActiveStates(rs0);
+    populateActiveStates(rs1);
+
+    scheduler.tick();
+
+    verify(shardedCounter, times(1)).counterHasSpareCapacity("r1");
+    verifyNoMoreInteractions(shardedCounter);
+  }
+
+  @Test
+  public void shouldHandleResourceUsageExceededLookupFailure() throws Exception {
+    setUp(20);
+    setResourceLimit("r1", 2);
+    initWorkflow(workflowUsingResources(WORKFLOW_ID1, "r1"));
+    when(shardedCounter.counterHasSpareCapacity("r1")).thenThrow(new RuntimeException("error!"));
+
+    final WorkflowInstance i0 = instance(WORKFLOW_ID1, "i0");
+    final RunState rs0 = RunState.create(i0, State.QUEUED, time.get(), 17);
+    populateActiveStates(rs0);
+
+    scheduler.tick();
+
+    verify(shardedCounter, times(1)).counterHasSpareCapacity("r1");
+    verify(stateManager).receiveIgnoreClosed(Event.dequeue(i0, ImmutableSet.of("r1")), 17);
   }
 
   @Test
@@ -491,7 +567,7 @@ public class SchedulerTest {
     verify(resourceDecorator, times(2 + 2)).decorateResources(any(RunState.class), eq(workflow.configuration()),
         eq(ImmutableSet.of("foo", "bar", "GLOBAL_STYX_CLUSTER")));
 
-    verify(stateManager, times(2)).receiveIgnoreClosed(Matchers.argThat(
+    verify(stateManager, times(2)).receiveIgnoreClosed(argThat(
         either(is(Event.dequeue(i0, ImmutableSet.of("baz", "GLOBAL_STYX_CLUSTER"))))
             .or(is(Event.dequeue(i4, ImmutableSet.of("baz", "GLOBAL_STYX_CLUSTER"))))),
         anyLong());
