@@ -28,10 +28,8 @@ import static java.util.concurrent.TimeUnit.MINUTES;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 
-import com.google.common.collect.ImmutableList;
 import com.spotify.styx.docker.DockerRunner.RunSpec;
 import com.spotify.styx.model.Backfill;
 import com.spotify.styx.model.Event;
@@ -39,6 +37,7 @@ import com.spotify.styx.model.ExecutionDescription;
 import com.spotify.styx.model.Resource;
 import com.spotify.styx.model.Schedule;
 import com.spotify.styx.model.SequenceEvent;
+import com.spotify.styx.model.TriggerParameters;
 import com.spotify.styx.model.Workflow;
 import com.spotify.styx.model.WorkflowConfiguration;
 import com.spotify.styx.model.WorkflowId;
@@ -51,6 +50,7 @@ import com.spotify.styx.util.TriggerInstantSpec;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import junitparams.JUnitParamsRunner;
 import org.junit.Test;
@@ -65,12 +65,21 @@ public class SystemTest extends StyxSchedulerServiceFixture {
           .schedule(Schedule.HOURS)
           .dockerImage("busybox")
           .dockerArgs(asList("--hour", "{}"))
+          .env("FOO", "foo", "BAR", "bar")
           .build();
   private static final WorkflowConfiguration WORKFLOW_CONFIGURATION_HOURLY_WITH_ZERO_OFFSET =
       WorkflowConfiguration.builder()
           .id("styx.TestEndpoint")
           .schedule(Schedule.HOURS)
           .offset("PT0S")
+          .dockerImage("busybox")
+          .dockerArgs(asList("--hour", "{}"))
+          .build();
+  private static final WorkflowConfiguration WORKFLOW_CONFIGURATION_HOURLY_WITH_TWO_HOURS_OFFSET =
+      WorkflowConfiguration.builder()
+          .id("styx.TestEndpoint")
+          .schedule(Schedule.HOURS)
+          .offset("PT2H")
           .dockerImage("busybox")
           .dockerArgs(asList("--hour", "{}"))
           .build();
@@ -89,6 +98,9 @@ public class SystemTest extends StyxSchedulerServiceFixture {
   private static final Workflow HOURLY_WORKFLOW_WITH_ZERO_OFFSET = Workflow.create(
       "styx",
       WORKFLOW_CONFIGURATION_HOURLY_WITH_ZERO_OFFSET);
+  private static final Workflow HOURLY_WORKFLOW_WITH_TWO_HOURS_OFFSET = Workflow.create(
+      "styx",
+      WORKFLOW_CONFIGURATION_HOURLY_WITH_TWO_HOURS_OFFSET);
   private static final ExecutionDescription TEST_EXECUTION_DESCRIPTION =
       ExecutionDescription.builder()
       .dockerImage(TEST_DOCKER_IMAGE)
@@ -119,22 +131,25 @@ public class SystemTest extends StyxSchedulerServiceFixture {
   private static final Resource RESOURCE_4 = Resource.create(RESOURCE_ID4, 3);
   private static final Resource RESOURCE_5 = Resource.create(RESOURCE_ID5, 1);
 
-  private static RunSpec naturalRunSpec(String executionId, String imageName, List<String> args) {
+  private static RunSpec naturalRunSpec(String executionId, String imageName, List<String> args,
+      Map<String, String> env) {
     return RunSpec.builder()
         .executionId(executionId)
         .imageName(imageName)
         .args(args)
         .trigger(Trigger.natural())
+        .env(env)
         .build();
   }
 
-  private static RunSpec unknownRunSpec(String executionId, String imageName, List<String> args, String triggerId) {
-    return RunSpec
-        .builder()
+  private static RunSpec unknownRunSpec(String executionId, String imageName, List<String> args, String triggerId,
+      Map<String, String> env) {
+    return RunSpec.builder()
         .executionId(executionId)
         .imageName(imageName)
         .args(args)
         .trigger(Trigger.unknown(triggerId))
+        .env(env)
         .build();
   }
 
@@ -148,7 +163,7 @@ public class SystemTest extends StyxSchedulerServiceFixture {
             .id("styx.TestEndpoint")
             .schedule(Schedule.parse("15,45 12,15 * * *"))
             .dockerImage("busybox")
-            .dockerArgs(ImmutableList.of())
+            .dockerArgs(List.of())
             .build());
 
     givenTheTimeIs("2016-03-14T15:30:00Z");
@@ -191,7 +206,7 @@ public class SystemTest extends StyxSchedulerServiceFixture {
             .id("styx.TestEndpoint")
             .schedule(Schedule.parse("15,45 12,15 * * *"))
             .dockerImage("busybox")
-            .dockerArgs(ImmutableList.of())
+            .dockerArgs(List.of())
             .build());
 
     givenTheTimeIs("2016-03-14T15:30:00Z");
@@ -206,7 +221,7 @@ public class SystemTest extends StyxSchedulerServiceFixture {
 
     final SequenceEvent expectedEvent =
         SequenceEvent.create(
-            Event.triggerExecution(wfi, Trigger.natural()),
+            Event.triggerExecution(wfi, Trigger.natural(), TriggerParameters.zero()),
             0,
             Instant.parse("2016-03-14T15:30:00Z").toEpochMilli());
 
@@ -291,7 +306,12 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     givenWorkflowEnabledStateIs(HOURLY_WORKFLOW, false);
     givenNextNaturalTrigger(HOURLY_WORKFLOW, "2016-03-14T16:00:00Z");
     final Backfill singleHourBackfill = ONE_DAY_HOURLY_BACKFILL.builder()
-        .end(ONE_DAY_HOURLY_BACKFILL.start().plus(1, ChronoUnit.HOURS)).build();
+        .end(ONE_DAY_HOURLY_BACKFILL.start().plus(1, ChronoUnit.HOURS))
+        .triggerParameters(TriggerParameters.builder()
+            .env("BAR", "overridden-bar",
+                "BAZ", "baz")
+            .build())
+        .build();
     givenBackfill(singleHourBackfill);
 
     styxStarts();
@@ -302,6 +322,12 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     tickScheduler();
     awaitNumberOfDockerRuns(1);
     WorkflowInstance workflowInstance = getDockerRuns().get(0)._1;
+    RunSpec runSpec = getDockerRuns().get(0)._2;
+
+    assertThat(runSpec.env(), is(Map.of(
+        "FOO", "foo",
+        "BAR", "overridden-bar",
+        "BAZ", "baz")));
 
     injectEvent(Event.started(workflowInstance));
     injectEvent(Event.terminate(workflowInstance, Optional.of(0)));
@@ -411,16 +437,18 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     assertThat(triggerInstantSpec.offsetInstant(),
                is(Instant.parse("2016-03-14T16:00:00Z")));
 
-    workflowInstance = create(HOURLY_WORKFLOW.id(), "2016-03-14T15");
-    // this should store a new value for nextNaturalTrigger, 2016-03-14T15
+    workflowInstance = create(HOURLY_WORKFLOW.id(), "2016-03-14T16");
+    // this should store a new value for nextNaturalTrigger, 2016-03-14T16
     workflowChanges(HOURLY_WORKFLOW_WITH_ZERO_OFFSET);
     workflow = storage.workflow(workflowInstance.workflowId()).get();
 
     triggerInstantSpec = storage.workflowsWithNextNaturalTrigger().get(workflow);
     assertThat(triggerInstantSpec.instant(),
-               is(Instant.parse("2016-03-14T15:00:00Z")));
+               is(Instant.parse("2016-03-14T16:00:00Z")));
     assertThat(triggerInstantSpec.offsetInstant(),
-               is(Instant.parse("2016-03-14T15:00:00Z")));
+               is(Instant.parse("2016-03-14T16:00:00Z")));
+
+    givenTheTimeIs("2016-03-14T16:30:00Z");
 
     tickTriggerManager();
     awaitWorkflowInstanceState(workflowInstance, RunState.State.QUEUED);
@@ -428,13 +456,41 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     awaitNumberOfDockerRuns(2);
 
     workflowInstance = getDockerRuns().get(1)._1;
-    assertThat(workflowInstance.parameter(), is("2016-03-14T15"));
+    assertThat(workflowInstance.parameter(), is("2016-03-14T16"));
 
     triggerInstantSpec = storage.workflowsWithNextNaturalTrigger().get(workflow);
     assertThat(triggerInstantSpec.instant(),
-               is(Instant.parse("2016-03-14T16:00:00Z")));
+               is(Instant.parse("2016-03-14T17:00:00Z")));
     assertThat(triggerInstantSpec.offsetInstant(),
-               is(Instant.parse("2016-03-14T16:00:00Z")));
+               is(Instant.parse("2016-03-14T17:00:00Z")));
+
+    givenTheTimeIs("2016-03-14T17:30:00Z");
+
+    workflowInstance = create(HOURLY_WORKFLOW.id(), "2016-03-14T16");
+    // this should store a the same value for nextNaturalTrigger, 2016-03-14T16
+    workflowChanges(HOURLY_WORKFLOW_WITH_TWO_HOURS_OFFSET);
+    workflow = storage.workflow(workflowInstance.workflowId()).get();
+
+    triggerInstantSpec = storage.workflowsWithNextNaturalTrigger().get(workflow);
+    assertThat(triggerInstantSpec.instant(),
+        is(Instant.parse("2016-03-14T16:00:00Z")));
+    assertThat(triggerInstantSpec.offsetInstant(),
+        is(Instant.parse("2016-03-14T18:00:00Z")));
+
+    givenTheTimeIs("2016-03-14T18:30:00Z");
+
+    tickTriggerManager();
+    // the instance 2016-03-14T16 is still active and should reach SUBMITTED state
+    awaitWorkflowInstanceState(workflowInstance, RunState.State.SUBMITTED);
+
+    workflowInstance = getDockerRuns().get(1)._1;
+    assertThat(workflowInstance.parameter(), is("2016-03-14T16"));
+
+    triggerInstantSpec = storage.workflowsWithNextNaturalTrigger().get(workflow);
+    assertThat(triggerInstantSpec.instant(),
+        is(Instant.parse("2016-03-14T17:00:00Z")));
+    assertThat(triggerInstantSpec.offsetInstant(),
+        is(Instant.parse("2016-03-14T19:00:00Z")));
   }
   }
 
@@ -475,7 +531,7 @@ public class SystemTest extends StyxSchedulerServiceFixture {
   @RunWith(JUnitParamsRunner.class)
   public static class RunsDockerImageWithArgsTemplateTest extends SystemTest {
   @Test
-  public void runsDockerImageWithArgsTemplate() throws Exception {
+  public void runsDockerImageWithArgsTemplateAndEnv() throws Exception {
     givenTheTimeIs("2016-03-14T15:59:01Z");
     givenWorkflow(HOURLY_WORKFLOW);
     givenWorkflowEnabledStateIs(HOURLY_WORKFLOW, true);
@@ -488,7 +544,8 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     WorkflowInstance workflowInstance = getDockerRuns().get(0)._1;
     RunSpec runSpec = getDockerRuns().get(0)._2;
     assertThat(workflowInstance.workflowId(), is(HOURLY_WORKFLOW.id()));
-    assertThat(runSpec, is(naturalRunSpec(runSpec.executionId(), "busybox", ImmutableList.of("--hour", "2016-03-14T15"))));
+    assertThat(runSpec, is(naturalRunSpec(runSpec.executionId(), "busybox", List.of("--hour", "2016-03-14T15"),
+        Map.of("FOO", "foo", "BAR", "bar"))));
   }
   }
 
@@ -508,7 +565,8 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     WorkflowInstance workflowInstance = getDockerRuns().get(0)._1;
     RunSpec runSpec = getDockerRuns().get(0)._2;
     assertThat(workflowInstance.workflowId(), is(HOURLY_WORKFLOW.id()));
-    assertThat(runSpec, is(naturalRunSpec(runSpec.executionId(), "busybox", ImmutableList.of("--hour", "2016-03-14T15"))));
+    assertThat(runSpec, is(naturalRunSpec(runSpec.executionId(), "busybox", List.of("--hour", "2016-03-14T15"),
+        Map.of("FOO", "foo", "BAR", "bar"))));
 
     injectEvent(Event.started(workflowInstance));
     injectEvent(Event.terminate(workflowInstance, Optional.of(20)));
@@ -519,6 +577,7 @@ public class SystemTest extends StyxSchedulerServiceFixture {
         .schedule(Schedule.HOURS)
         .dockerImage("busybox:v777")
         .dockerArgs(asList("other", "args"))
+        .env("QUUX", "quux")
         .build();
 
     Workflow changedWorkflow = Workflow.create(
@@ -530,14 +589,15 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     // we must stagger the time progression here in order not to no trigger tons of retries
     timePasses(TerminationHandler.MISSING_DEPS_RETRY_DELAY_MINUTES - 1, MINUTES);
     timePasses(59, SECONDS);
-    timePasses(StyxScheduler.SCHEDULER_TICK_INTERVAL_SECONDS, SECONDS);
+    timePasses(StyxScheduler.DEFAULT_SCHEDULER_TICK_INTERVAL.getSeconds() * 2, SECONDS);
 
     awaitNumberOfDockerRuns(2);
 
     WorkflowInstance workflowInstance2 = getDockerRuns().get(1)._1;
     RunSpec runSpec2 = getDockerRuns().get(1)._2;
     assertThat(workflowInstance2.workflowId(), is(HOURLY_WORKFLOW.id()));
-    assertThat(runSpec2, is(naturalRunSpec(runSpec2.executionId(), "busybox:v777", ImmutableList.of("other", "args"))));
+    assertThat(runSpec2, is(naturalRunSpec(runSpec2.executionId(), "busybox:v777", List.of("other", "args"),
+        Map.of("QUUX", "quux"))));
   }
   }
 
@@ -637,7 +697,8 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     RunSpec runSpec = getDockerRuns().get(0)._2;
     assertThat(workflowInstance2.workflowId(), is(HOURLY_WORKFLOW.id()));
     assertThat(runSpec, is(
-        unknownRunSpec(runSpec.executionId(), "busybox", ImmutableList.of("--hour", "2016-03-14T14"), "trig1")));
+        unknownRunSpec(runSpec.executionId(), "busybox", List.of("--hour", "2016-03-14T14"), "trig1",
+            Map.of("FOO", "foo", "BAR", "bar"))));
   }
   }
 
@@ -667,25 +728,6 @@ public class SystemTest extends StyxSchedulerServiceFixture {
     awaitWorkflowInstanceCompletion(workflowInstance);
     tickScheduler();
     assertThat(getState(workflowInstance), is(Optional.empty()));
-  }
-  }
-
-  @RunWith(JUnitParamsRunner.class)
-  public static class CreatesCounterShardsForExistingResourcesTest extends SystemTest {
-  @Test
-  public void createsCounterShardsForExistingResources() throws Exception {
-    givenResource(RESOURCE_1);
-    givenResource(RESOURCE_2);
-    givenResource(RESOURCE_3);
-
-    styxStarts();
-
-    assertEquals(RESOURCE_1.concurrency(), storage.getLimitForCounter(RESOURCE_1.id()));
-    assertEquals(RESOURCE_2.concurrency(), storage.getLimitForCounter(RESOURCE_2.id()));
-    assertEquals(RESOURCE_3.concurrency(), storage.getLimitForCounter(RESOURCE_3.id()));
-    assertEquals(128, storage.shardsForCounter(RESOURCE_1.id()).size());
-    assertEquals(128, storage.shardsForCounter(RESOURCE_2.id()).size());
-    assertEquals(128, storage.shardsForCounter(RESOURCE_3.id()).size());
   }
   }
 }
