@@ -41,14 +41,11 @@ import com.google.api.client.googleapis.json.GoogleJsonResponseException;
 import com.google.api.client.http.HttpHeaders;
 import com.google.api.client.http.HttpResponseException;
 import com.google.api.services.iam.v1.model.ServiceAccountKey;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.hash.Hashing;
 import com.spotify.styx.ServiceAccountKeyManager;
 import com.spotify.styx.docker.DockerRunner.RunSpec;
 import com.spotify.styx.docker.KubernetesDockerRunner.KubernetesSecretSpec;
 import com.spotify.styx.model.WorkflowInstance;
-import com.spotify.styx.util.IsClosedException;
 import io.fabric8.kubernetes.api.model.DoneablePod;
 import io.fabric8.kubernetes.api.model.DoneableSecret;
 import io.fabric8.kubernetes.api.model.ObjectMeta;
@@ -70,6 +67,8 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.util.IntSummaryStatistics;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
@@ -113,6 +112,8 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
       .serviceAccount(SERVICE_ACCOUNT)
       .build();
 
+  private static final String STYX_ENVIRONMENT = "testing";
+
   private ExecutorService executor;
 
   @Mock NamespacedKubernetesClient k8sClient;
@@ -130,7 +131,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
   KubernetesGCPServiceAccountSecretManager sut;
 
   @Before
-  public void setUp() throws Exception {
+  public void setUp() {
     MockitoAnnotations.initMocks(this);
 
     executor = Executors.newCachedThreadPool();
@@ -138,7 +139,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
     when(k8sClient.inNamespace(any(String.class))).thenReturn(k8sClient);
     when(k8sClient.pods()).thenReturn(pods);
     when(pods.list()).thenReturn(podList);
-    when(podList.getItems()).thenReturn(ImmutableList.of());
+    when(podList.getItems()).thenReturn(List.of());
 
     when(secrets.withName(any(String.class))).thenReturn(namedResource);
     when(namedResource.get()).thenReturn(null);
@@ -149,12 +150,12 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
   }
 
   @After
-  public void tearDown() throws Exception {
+  public void tearDown() {
     executor.shutdownNow();
   }
 
   @Test
-  public void shouldCreateServiceAccountKeysAndSecret() throws IsClosedException, IOException {
+  public void shouldCreateServiceAccountKeysAndSecret() throws IOException {
     when(serviceAccountKeyManager.serviceAccountExists(SERVICE_ACCOUNT)).thenReturn(true);
 
     ServiceAccountKey jsonKey = new ServiceAccountKey();
@@ -179,7 +180,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
   }
 
   @Test(expected = RuntimeException.class)
-  public void shouldCleanupKeysIfKeyCreationFails() throws IsClosedException, IOException {
+  public void shouldCleanupKeysIfKeyCreationFails() throws IOException {
     when(serviceAccountKeyManager.serviceAccountExists(SERVICE_ACCOUNT)).thenReturn(true);
 
     ServiceAccountKey jsonKey = new ServiceAccountKey();
@@ -199,7 +200,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
   }
 
   @Test
-  public void shouldDeleteGCPKeysIfSecretAlreadyExists() throws IsClosedException, IOException {
+  public void shouldDeleteGCPKeysIfSecretAlreadyExists() throws IOException {
     when(serviceAccountKeyManager.serviceAccountExists(SERVICE_ACCOUNT)).thenReturn(true);
 
     ServiceAccountKey jsonKey = new ServiceAccountKey();
@@ -223,7 +224,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
 
   @Test
   public void shouldNotConcurrentlyCreateServiceAccountKeysAndSecrets()
-      throws IsClosedException, IOException, ExecutionException, InterruptedException {
+      throws IOException, ExecutionException, InterruptedException {
 
     final ServiceAccountKey jsonKey = new ServiceAccountKey();
     jsonKey.setName("key.json");
@@ -284,10 +285,10 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
 
     when(k8sClient.secrets()).thenReturn(secrets);
     when(secrets.list()).thenReturn(secretList);
-    when(secretList.getItems()).thenReturn(ImmutableList.of(secret));
+    when(secretList.getItems()).thenReturn(List.of(secret));
 
     // Verify that an unused service account key secret is deleted
-    when(podList.getItems()).thenReturn(ImmutableList.of());
+    when(podList.getItems()).thenReturn(List.of());
     sut.cleanup();
     verify(serviceAccountKeyManager).deleteKey(keyName(SERVICE_ACCOUNT, "json-key"));
     verify(serviceAccountKeyManager).deleteKey(keyName(SERVICE_ACCOUNT, "p12-key"));
@@ -302,17 +303,17 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
 
     when(k8sClient.secrets()).thenReturn(secrets);
     when(secrets.list()).thenReturn(secretList);
-    when(secretList.getItems()).thenReturn(ImmutableList.of(secret));
+    when(secretList.getItems()).thenReturn(List.of(secret));
 
     final KubernetesSecretSpec secretSpec = KubernetesSecretSpec.builder()
         .serviceAccountSecret(secret.getMetadata().getName())
         .build();
-    final Pod pod = KubernetesDockerRunner.createPod(WORKFLOW_INSTANCE, RUN_SPEC_WITH_SA, secretSpec);
+    final Pod pod = createPod(WORKFLOW_INSTANCE, RUN_SPEC_WITH_SA, secretSpec);
 
     final PodStatus podStatus = podStatus(phase);
     pod.setStatus(podStatus);
 
-    when(podList.getItems()).thenReturn(ImmutableList.of());
+    when(podList.getItems()).thenReturn(List.of());
     sut.cleanup();
     verify(serviceAccountKeyManager).deleteKey(keyName(SERVICE_ACCOUNT, "json-key"));
     verify(serviceAccountKeyManager).deleteKey(keyName(SERVICE_ACCOUNT, "p12-key"));
@@ -328,10 +329,10 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
     final Secret secret3 = fakeServiceAccountKeySecret(
         SERVICE_ACCOUNT, SECRET_EPOCH, "json-key-3", "p12-key-3", EXPIRED_CREATION_TIMESTAMP.toString());
 
-    when(podList.getItems()).thenReturn(ImmutableList.of());
+    when(podList.getItems()).thenReturn(List.of());
     when(k8sClient.secrets()).thenReturn(secrets);
     when(secrets.list()).thenReturn(secretList);
-    when(secretList.getItems()).thenReturn(ImmutableList.of(secret1, secret2, secret3));
+    when(secretList.getItems()).thenReturn(List.of(secret1, secret2, secret3));
 
     when(secrets.delete(secret1)).thenThrow(new KubernetesClientException("fail delete secret1"));
     doThrow(new IOException("fail delete json-key-2")).when(serviceAccountKeyManager).deleteKey(keyName(SERVICE_ACCOUNT,"json-key-2"));
@@ -359,14 +360,14 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
 
     when(k8sClient.secrets()).thenReturn(secrets);
     when(secrets.list()).thenReturn(secretList);
-    when(secretList.getItems()).thenReturn(ImmutableList.of(secret));
+    when(secretList.getItems()).thenReturn(List.of(secret));
 
     final KubernetesSecretSpec secretSpec = KubernetesSecretSpec.builder()
         .serviceAccountSecret(secret.getMetadata().getName())
         .build();
-    final Pod pod = KubernetesDockerRunner.createPod(WORKFLOW_INSTANCE, RUN_SPEC_WITH_SA, secretSpec);
+    final Pod pod = createPod(WORKFLOW_INSTANCE, RUN_SPEC_WITH_SA, secretSpec);
     pod.setStatus(podStatus("Running"));
-    when(podList.getItems()).thenReturn(ImmutableList.of(pod));
+    when(podList.getItems()).thenReturn(List.of(pod));
     sut.cleanup();
     verify(serviceAccountKeyManager, never()).deleteKey(anyString());
     verify(secrets, never()).delete(any(Secret.class));
@@ -379,8 +380,8 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
 
     when(k8sClient.secrets()).thenReturn(secrets);
     when(secrets.list()).thenReturn(secretList);
-    when(secretList.getItems()).thenReturn(ImmutableList.of(secret));
-    when(podList.getItems()).thenReturn(ImmutableList.of());
+    when(secretList.getItems()).thenReturn(List.of(secret));
+    when(podList.getItems()).thenReturn(List.of());
 
     sut.cleanup();
 
@@ -399,12 +400,31 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
 
     when(k8sClient.secrets()).thenReturn(secrets);
     when(secrets.list()).thenReturn(secretList);
-    when(secretList.getItems()).thenReturn(ImmutableList.of(secret1, secret2));
+    when(secretList.getItems()).thenReturn(List.of(secret1, secret2));
 
     sut.cleanup();
 
     verify(serviceAccountKeyManager, never()).deleteKey(anyString());
     verify(secrets, never()).delete(any(Secret.class));
+  }
+
+  @Test
+  public void shouldHandlePermissionDenied() throws IOException {
+    when(serviceAccountKeyManager.serviceAccountExists(anyString())).thenReturn(true);
+
+    final GoogleJsonResponseException permissionDenied = new GoogleJsonResponseException(
+        new HttpResponseException.Builder(403, "Forbidden", new HttpHeaders()),
+        new GoogleJsonError().set("status", "PERMISSION_DENIED"));
+
+    doThrow(permissionDenied).when(serviceAccountKeyManager).createJsonKey(any());
+    doThrow(permissionDenied).when(serviceAccountKeyManager).createP12Key(any());
+
+    exception.expect(InvalidExecutionException.class);
+    exception.expectMessage(String.format(
+        "Permission denied when creating keys for service account: %s. Styx needs to be Service Account Key Admin.",
+        SERVICE_ACCOUNT));
+
+    sut.ensureServiceAccountKeySecret(WORKFLOW_ID.toString(), SERVICE_ACCOUNT);
   }
 
   @Test
@@ -419,13 +439,15 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
     doThrow(resourceExhausted).when(serviceAccountKeyManager).createP12Key(any());
 
     exception.expect(InvalidExecutionException.class);
-    exception.expectMessage("Maximum number of keys on service account reached: " + SERVICE_ACCOUNT);
+    exception.expectMessage(String.format(
+        "Maximum number of keys on service account reached: %s. Styx requires 4 keys to operate.",
+        SERVICE_ACCOUNT));
 
     sut.ensureServiceAccountKeySecret(WORKFLOW_ID.toString(), SERVICE_ACCOUNT);
   }
 
   @Test
-  public void shouldUseExistingServiceAccountSecret() throws IsClosedException, IOException {
+  public void shouldUseExistingServiceAccountSecret() throws IOException {
 
     final String jsonKeyId = "json-key";
     final String p12KeyId = "p12-key";
@@ -451,7 +473,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
   }
 
   @Test
-  public void shouldFailIfServiceAccountDoesNotExist() throws IsClosedException, IOException {
+  public void shouldFailIfServiceAccountDoesNotExist() throws IOException {
     when(serviceAccountKeyManager.serviceAccountExists(SERVICE_ACCOUNT)).thenReturn(false);
 
     exception.expect(InvalidExecutionException.class);
@@ -464,7 +486,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
   public void shouldCreateNewServiceAccountKeysIfKeysAreDeleted() throws IOException {
 
     final ObjectMeta metadata = new ObjectMeta();
-    metadata.setAnnotations(ImmutableMap.of("styx-wf-sa", SERVICE_ACCOUNT));
+    metadata.setAnnotations(Map.of("styx-wf-sa", SERVICE_ACCOUNT));
 
     final String jsonKeyId = "json-key";
     final String p12KeyId = "p12-key";
@@ -509,7 +531,7 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
   }
 
   @Test
-  public void shouldSmearRotationWeekly() throws Exception {
+  public void shouldSmearRotationWeekly() {
     final long hours = Duration.ofDays(7).toHours();
     final int[] rotationsPerHour = new int[(int) hours];
     final int n = 10000;
@@ -539,14 +561,14 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
     final ObjectMeta metadata = new ObjectMeta();
     metadata.setCreationTimestamp(creationTimestamp);
     metadata.setName("styx-wf-sa-keys-" + epoch + "-" + Hashing.sha256().hashString(serviceAccount, UTF_8));
-    metadata.setAnnotations(ImmutableMap.of(
+    metadata.setAnnotations(Map.of(
         "styx-wf-sa", serviceAccount,
         "styx-wf-sa-json-key-name", jsonKeyName,
         "styx-wf-sa-p12-key-name", p12KeyName));
 
     return new SecretBuilder()
         .withMetadata(metadata)
-        .withData(ImmutableMap.of(
+        .withData(Map.of(
             "styx-wf-sa.json", "json-private-key-data",
             "styx-wf-sa.p12", "p12-private-key-data"))
         .build();
@@ -560,5 +582,12 @@ public class KubernetesGCPServiceAccountSecretManagerTest {
     final PodStatus podStatus = new PodStatus();
     podStatus.setPhase(phase);
     return podStatus;
+  }
+
+  private static Pod createPod(WorkflowInstance workflowInstance,
+                               DockerRunner.RunSpec runSpec,
+                               KubernetesSecretSpec secretSpec) {
+    return KubernetesDockerRunner
+        .createPod(workflowInstance, runSpec, secretSpec, STYX_ENVIRONMENT);
   }
 }
